k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-arch-hw-1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-arch-hw-1
  template:
    metadata:
      labels:
        app: otus-arch-hw-1
    spec:
      containers:
      - name: otus-arch-hw-1
        image: rodionovandrew/otus-soft-arch-hw-1:1
        ports:
          - name: web
            containerPort: 8000
        readinessProbe:
          httpGet:
            port: web
            path: /
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            port: web
            path: /health
          initialDelaySeconds: 5
          periodSeconds: 10
