k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-arch-hw-1-service
spec:
  selector:
    app: otus-arch-hw-1
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
